Extract ghcide-bench to a standalone package

--- a/cabal.project
+++ b/cabal.project
@@ -4,6 +4,7 @@ packages:
          ./shake-bench
          ./hls-graph
          ./ghcide
+         ./ghcide-bench
          ./hls-plugin-api
          ./hls-test-utils
          ./plugins/hls-tactics-plugin
