--- a/ghcide-bench/ghcide-bench.cabal
+++ b/ghcide-bench/ghcide-bench.cabal
@@ -13,7 +13,6 @@ description:        An LSP client for running performance experiments on HLS
 homepage:           https://github.com/haskell/haskell-language-server/tree/master/ghcide#readme
 bug-reports:        https://github.com/haskell/haskell-language-server/issues
 tested-with:        GHC == 8.6.5 || == 8.8.4 || == 8.10.7 || == 9.0.2 || == 9.2.3 || == 9.2.4
-extra-source-files: README.md
 
 executable ghcide-bench
     default-language: Haskell2010
@@ -68,6 +67,7 @@ library
         Development.IDE.Test.Diagnostic
     build-depends:
         aeson,
+        async,
         base == 4.*,
         binary,
         bytestring,
