--- a/cabal.project
+++ b/cabal.project
@@ -65,13 +65,24 @@ source-repository-package
   tag: 7a0af7a8fd38045fd15fb13445bdcc7085325460
   -- https://github.com/tibbe/ekg-json/pull/12
 
--- Needed for ghcide-bench until a new release of lsp-test is out
+-- Remove me when a new version of lsp is released
 source-repository-package
   type:git
-  location: https://github.com/haskell/lsp
+  location: https://github.com/kokobd/lsp
+  subdir: lsp
+  tag: 80ebd816454a9e44d4cd93793ef3badc661b0f2f
+
+source-repository-package
+  type:git
+  location: https://github.com/kokobd/lsp
+  subdir: lsp-types
+  tag: 80ebd816454a9e44d4cd93793ef3badc661b0f2f
+
+source-repository-package
+  type:git
+  location: https://github.com/kokobd/lsp
   subdir: lsp-test
-  tag: c95eb06c70c35f1e13c37ed11a7d9e5b36bfa2e8
-  -- https://github.com/haskell/lsp/pull/450
+  tag: 80ebd816454a9e44d4cd93793ef3badc661b0f2f
 
 allow-newer:
   -- ghc-9.2
