--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -244,7 +244,7 @@ common class
     cpp-options: -Dhls_class
 
 common callHierarchy
-  if flag(callHierarchy) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
+  if flag(callHierarchy)
     build-depends: hls-call-hierarchy-plugin ^>= 1.0
     cpp-options: -Dhls_callHierarchy
 
@@ -259,12 +259,12 @@ common eval
     cpp-options: -Dhls_eval
 
 common importLens
-  if flag(importLens) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
+  if flag(importLens)
     build-depends: hls-explicit-imports-plugin ^>= 1.1
     cpp-options: -Dhls_importLens
 
 common refineImports
-  if flag(refineImports) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
+  if flag(refineImports)
     build-depends: hls-refine-imports-plugin ^>=1.0
     cpp-options: -Dhls_refineImports
 
@@ -294,12 +294,12 @@ common stan
     cpp-options: -Dhls_stan
 
 common moduleName
-  if flag(moduleName) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
+  if flag(moduleName)
     build-depends: hls-module-name-plugin ^>= 1.0
     cpp-options: -Dhls_moduleName
 
 common pragmas
-  if flag(pragmas) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
+  if flag(pragmas)
     build-depends: hls-pragmas-plugin ^>= 1.0
     cpp-options: -Dhls_pragmas
 
@@ -314,7 +314,7 @@ common alternateNumberFormat
     cpp-options: -Dhls_alternateNumberFormat
 
 common qualifyImportedNames
-  if flag(qualifyImportedNames) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
+  if flag(qualifyImportedNames)
     build-depends: hls-qualify-imported-names-plugin ^>=1.0
     cpp-options: -Dhls_qualifyImportedNames
 
@@ -334,7 +334,7 @@ common gadt
     cpp-options: -Dhls_gadt
 
 common explicitFixity
-  if flag(explicitFixity) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
+  if flag(explicitFixity)
     build-depends: hls-explicit-fixity-plugin ^>= 1.0
     cpp-options: -DexplicitFixity
 
