--- a/cabal.project
+++ b/cabal.project
@@ -84,21 +84,21 @@ source-repository-package
 -- Remove me when a new version of lsp is released
 source-repository-package
   type:git
-  location: https://github.com/kokobd/lsp
+  location: https://github.com/haskell/lsp
   subdir: lsp
-  tag: 3b7c659bbe50a9ea93ce66a55fba43404fa6d6ef
+  tag: b0f8596887088b8ab65fc1015c773f45b47234ae
 
 source-repository-package
   type:git
-  location: https://github.com/kokobd/lsp
+  location: https://github.com/haskell/lsp
   subdir: lsp-types
-  tag: 3b7c659bbe50a9ea93ce66a55fba43404fa6d6ef
+  tag: b0f8596887088b8ab65fc1015c773f45b47234ae
 
 source-repository-package
   type:git
-  location: https://github.com/kokobd/lsp
+  location: https://github.com/haskell/lsp
   subdir: lsp-test
-  tag: 3b7c659bbe50a9ea93ce66a55fba43404fa6d6ef
+  tag: b0f8596887088b8ab65fc1015c773f45b47234ae
 
 allow-newer:
   -- ghc-9.4
