--- a/stack.yaml
+++ b/stack.yaml
@@ -41,9 +41,12 @@ extra-deps:
 - hiedb-0.4.1.0@sha256:fb20c657d9ecc91701b00dffcf4bbd77cb83720a1f9d867badd77ea227973135,2875
 - implicit-hie-0.1.2.7@sha256:82bbbb1a8c05f99c8af3c16ac53e80c8648d8bf047b25ed5ce45a135bd736907,3122
 - implicit-hie-cradle-0.5.0.0@sha256:4276f60f3a59bc22df03fd918f73bca9f777de9568f85e3a8be8bd7566234a59,2368
-- lsp-1.5.0.0
-- lsp-test-0.14.0.3
-- lsp-types-1.5.0.0
+- git: git@github.com:haskell/lsp
+  commit: b0f8596887088b8ab65fc1015c773f45b47234ae
+  subdirs:
+  - lsp
+  - lsp-types
+  - lsp-test
 - monad-dijkstra-0.1.1.3@sha256:d2fc098d7c122555e726830a12ae0423ac187f89de9228f32e56e2f6fc2238e1,1900
 - retrie-1.2.0.1
 - co-log-core-0.3.1.0
