Make hls-code-range-plugin buildable on 9.4 by removing usused exactprint dependencies

--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -319,7 +319,7 @@ common qualifyImportedNames
     cpp-options: -Dhls_qualifyImportedNames
 
 common codeRange
-  if flag(codeRange) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
+  if flag(codeRange)
     build-depends: hls-code-range-plugin ^>= 1.0
     cpp-options: -Dhls_codeRange
 
