Try to evaluate GIT_DIFF value to pass to pre-commit

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -19,7 +19,7 @@ jobs:
       if: env.GIT_DIFF
     - uses: pre-commit/action@v3.0.0
       with:
-        extra_args: --files $GIT_DIFF
+        extra_args: --files ${{ env.GIT_DIFF }}
       if: env.GIT_DIFF
 
     - uses: ./.github/actions/setup-build
