Conditionally run the pre-commit job only when there are haskell source changes

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -6,31 +6,31 @@ on:
     branches: [master]
 
 jobs:
-  pre-commit:
-    runs-on: ubuntu-latest
-    steps:
+  file-diff:
     - uses: actions/checkout@v3
     - uses: technote-space/get-diff-action@v4.0.1
       with:
         PATTERNS: |
           +(src|exe|test|ghcide|plugins|hls-plugin-api|hie-compat|hls-graph|hls-test-utils)/**/*.hs
+  pre-commit:
+    needs: file-diff
+    if env.GIT_DIFF
+    runs-on: ubuntu-latest
+    steps:
 
     - uses: ./.github/actions/setup-build
       with:
         os: ${{ runner.os }}
         shorten-hls: false
-      if: env.GIT_DIFF
 
     - name: "Install stylish-haskell"
       run: |
         cabal install stylish-haskell
         echo "${HOME}/.cabal/bin" >> $GITHUB_PATH
-      if: env.GIT_DIFF
 
     - name: "Check stylish-haskell is available"
       run: |
         echo $(which stylish-haskell)
-      if: env.GIT_DIFF
 
     - name: Compiled deps cache
       id: stylish-haskell-compiled-cache
@@ -44,11 +44,8 @@ jobs:
               ${{ inputs.cache-prefix }}${{ env.cache-name }}-${{ inputs.os }}-${{ inputs.ghc }}-${{ env.INDEX_STATE }}-
               ${{ inputs.cache-prefix }}${{ env.cache-name }}-${{ inputs.os }}-${{ inputs.ghc }}-
               ${{ inputs.cache-prefix }}${{ env.cache-name }}-${{ inputs.os }}-
-      if: env.GIT_DIFF
 
     - uses: actions/setup-python@v4
-      if: env.GIT_DIFF
     - uses: pre-commit/action@v3.0.0
       with:
         extra_args: --files ${{ env.GIT_DIFF }}
-      if: env.GIT_DIFF
