--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -7,17 +7,20 @@ on:
 
 jobs:
   file-diff:
+    runs-on: ubuntu-latest
+    outputs:
+      changed_files: ${{ env.GIT_DIFF }}
+    steps:
     - uses: actions/checkout@v3
     - uses: technote-space/get-diff-action@v4.0.1
       with:
         PATTERNS: |
           +(src|exe|test|ghcide|plugins|hls-plugin-api|hie-compat|hls-graph|hls-test-utils)/**/*.hs
   pre-commit:
-    needs: file-diff
-    if env.GIT_DIFF
     runs-on: ubuntu-latest
+    needs: file-diff
+    if: needs.file-diff.changed_files
     steps:
-
     - uses: ./.github/actions/setup-build
       with:
         os: ${{ runner.os }}
@@ -48,4 +51,4 @@ jobs:
     - uses: actions/setup-python@v4
     - uses: pre-commit/action@v3.0.0
       with:
-        extra_args: --files ${{ env.GIT_DIFF }}
+        extra_args: --files ${{ needs.file-diff.changed_files }}
