--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -9,18 +9,23 @@ jobs:
   file-diff:
     runs-on: ubuntu-latest
     outputs:
-      changed_files: ${{ env.GIT_DIFF }}
+      git-diff: ${{ steps.git-diff.outputs.diff }}
     steps:
-    - uses: actions/checkout@v3
-    - uses: technote-space/get-diff-action@v4.0.1
-      with:
-        PATTERNS: |
-          +(src|exe|test|ghcide|plugins|hls-plugin-api|hie-compat|hls-graph|hls-test-utils)/**/*.hs
+        - name: Checkout code
+          uses: actions/checkout@v3
+        - name: Find changed files
+          uses: technote-space/get-diff-action@v4.0.1
+          id: git-diff
+          with:
+            PATTERNS: |
+              +(src|exe|test|ghcide|plugins|hls-plugin-api|hie-compat|hls-graph|hls-test-utils)/**/*.hs
   pre-commit:
     runs-on: ubuntu-latest
     needs: file-diff
-    if: needs.file-diff.changed_files
     steps:
+    - name: "ECHO changed files"
+      run: echo ${{ needs.file-diff.outputs.git-diff }}
+    - uses: actions/checkout@v3
     - uses: ./.github/actions/setup-build
       with:
         os: ${{ runner.os }}
@@ -51,4 +56,4 @@ jobs:
     - uses: actions/setup-python@v4
     - uses: pre-commit/action@v3.0.0
       with:
-        extra_args: --files ${{ needs.file-diff.changed_files }}
+        extra_args: --files ${{ needs.file-diff.outputs.git-diff }}
