--- a/cabal.project
+++ b/cabal.project
@@ -65,11 +65,16 @@ constraints:
 -- This is benign and won't affect our ability to release to Hackage,
 -- because we only depend on `ekg-json` when a non-default flag
 -- is turned on.
+-- DELETE MARKER FOR CI
+-- centos7 has an old version of git which cabal doesn't
+-- support. We delete these lines in gitlab ci to workaround
+-- this issue, as this is not necessary to build our binaries.
 source-repository-package
   type:git
   location: https://github.com/pepeiborra/ekg-json
   tag: 7a0af7a8fd38045fd15fb13445bdcc7085325460
   -- https://github.com/tibbe/ekg-json/pull/12
+-- END DELETE
 
 allow-newer:
   -- ghc-9.4
