--- a/ghcide/test/ghcide-test-utils.cabal
+++ b/ghcide/test/ghcide-test-utils.cabal
@@ -25,7 +25,7 @@ library
     default-language: Haskell2010
     build-depends:
         aeson,
-        base,
+        base > 4.9 && < 5,
         containers,
         data-default,
         directory,
