Remove unused build-depends and install warnings (#3155)
* Remove unused build-depends and install warnings

* Remove -Werror

--- a/hls-graph/hls-graph.cabal
+++ b/hls-graph/hls-graph.cabal
@@ -76,7 +76,6 @@ library
     , js-flot
     , js-jquery
     , list-t
-    , primitive
     , stm
     , stm-containers
     , time
@@ -91,7 +90,8 @@ library
             template-haskell
   if flag(stm-stats)
         cpp-options: -DSTM_STATS
-
+  if impl(ghc >= 9)
+        ghc-options: -Wunused-packages
 
   ghc-options:
     -Wall -Wredundant-constraints -Wno-name-shadowing
@@ -136,3 +136,5 @@ test-suite tests
     , text
     , unordered-containers
   build-tool-depends: hspec-discover:hspec-discover -any
+  if impl(ghc >= 9)
+        ghc-options: -Wunused-packages
