--- a/hls-plugin-api/hls-plugin-api.cabal
+++ b/hls-plugin-api/hls-plugin-api.cabal
@@ -52,7 +52,6 @@ library
     , lsp                   ^>=1.6.0.0
     , opentelemetry         >=0.4
     , optparse-applicative
-    , process
     , regex-tdfa            >=1.3.1.0
     , text
     , transformers
@@ -70,6 +69,8 @@ library
 
   if flag(pedantic)
     ghc-options: -Werror
+  if impl(ghc >= 9)
+    ghc-options: -Wunused-packages
 
   default-language:   Haskell2010
   default-extensions:
