--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,6 +75,16 @@ workflow:
     - x86_64-linux
   image: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-deb9:$DOCKER_REV"
 
+.x86_64-linux-ubuntu18.04:
+  tags:
+    - x86_64-linux
+  image: "ubuntu:18.04"
+
+.x86_64-linux-ubuntu20.04:
+  tags:
+    - x86_64-linux
+  image: "ubuntu:20.04"
+
 .x86_64-linux-centos7:
   tags:
     - x86_64-linux
@@ -161,6 +171,84 @@ test-armv7-linux-deb10:
   before_script:
     - sudo apt update
     - sudo apt install -y tree
+
+
+###########################
+# x86_64 linux ubuntu18.04
+###########################
+
+build-x86_64-linux-ubuntu18.04:
+  extends:
+    - .build
+    - .x86_64-linux-ubuntu18.04
+  before_script:
+    - apt update
+    - apt install -y build-essential curl libffi-dev libffi6 libgmp-dev libgmp10 libncurses-dev libncurses5 libtinfo5 zlib1g-dev patchelf tree
+  variables:
+    ADD_CABAL_ARGS: "--enable-split-sections"
+
+tar-x86_64-linux-ubuntu18.04:
+  extends:
+    - .artifacts
+    - .x86_64-linux-ubuntu18.04
+  stage: tar
+  needs: ["build-x86_64-linux-ubuntu18.04"]
+  script:
+    - ./.gitlab/tar.sh
+  variables:
+    TARBALL_ARCHIVE_SUFFIX: x86_64-ubuntu18.04-linux
+    TARBALL_EXT: tar.xz
+  before_script:
+    - apt update
+    - apt install -y make tar xz-utils curl
+
+test-x86_64-linux-ubuntu18.04:
+  extends:
+    - .test
+    - .x86_64-linux-ubuntu18.04
+  needs: ["tar-x86_64-linux-ubuntu18.04"]
+  before_script:
+    - apt update
+    - apt install -y tree patchelf make curl build-essential
+
+
+###########################
+# x86_64 linux ubuntu20.04
+###########################
+
+build-x86_64-linux-ubuntu20.04:
+  extends:
+    - .build
+    - .x86_64-linux-ubuntu20.04
+  before_script:
+    - apt update
+    - apt install -y build-essential curl libffi-dev libffi7 libgmp-dev libgmp10 libncurses-dev libncurses5 libtinfo5 zlib1g-dev patchelf tree
+  variables:
+    ADD_CABAL_ARGS: "--enable-split-sections"
+
+tar-x86_64-linux-ubuntu20.04:
+  extends:
+    - .artifacts
+    - .x86_64-linux-ubuntu20.04
+  stage: tar
+  needs: ["build-x86_64-linux-ubuntu20.04"]
+  script:
+    - ./.gitlab/tar.sh
+  variables:
+    TARBALL_ARCHIVE_SUFFIX: x86_64-ubuntu20.04-linux
+    TARBALL_EXT: tar.xz
+  before_script:
+    - apt update
+    - apt install -y make tar xz-utils curl
+
+test-x86_64-linux-ubuntu20.04:
+  extends:
+    - .test
+    - .x86_64-linux-ubuntu20.04
+  needs: ["tar-x86_64-linux-ubuntu20.04"]
+  before_script:
+    - apt update
+    - apt install -y tree patchelf make curl build-essential
 
 
 ######################
