--- a/plugins/hls-haddock-comments-plugin/hls-haddock-comments-plugin.cabal
+++ b/plugins/hls-haddock-comments-plugin/hls-haddock-comments-plugin.cabal
@@ -18,7 +18,10 @@ extra-source-files:
   test/testdata/*.hs
 
 library
-  exposed-modules:    Ide.Plugin.HaddockComments
+  exposed-modules:
+    Ide.Plugin.HaddockComments
+    Ide.Plugin.HaddockComments.Data
+    Ide.Plugin.HaddockComments.Prelude
   hs-source-dirs:     src
   ghc-options:
     -Wall -Wno-name-shadowing -Wredundant-constraints
@@ -35,6 +38,8 @@ library
     , lsp-types
     , text
     , unordered-containers
+    , transformers
+    , mtl
 
   default-language:   Haskell2010
   default-extensions:
