simplify test messages

--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -523,6 +523,7 @@ test-suite func-test
     , lens
     , lens-aeson
     , ghcide
+    , ghcide-test-utils
     , hls-test-utils ^>=1.4
     , lsp-types
     , aeson
