Foce llvm 14 on darwin

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -559,7 +559,7 @@ build-aarch64-darwin:
     - aarch64-darwin-m1
   before_script:
     - export HOMEBREW_CHANGE_ARCH_TO_ARM=1
-    - arch -arm64 /bin/bash ./.gitlab/brew.sh llvm autoconf automake coreutils make tree
+    - arch -arm64 /bin/bash ./.gitlab/brew.sh llvm@14 autoconf automake coreutils make tree
   script: |
     export PATH="$CI_PROJECT_DIR/.brew/opt/llvm/bin:$CI_PROJECT_DIR/.brew/bin:$CI_PROJECT_DIR/.brew/sbin:$PATH"
     export CC=$CI_PROJECT_DIR/.brew/opt/llvm/bin/clang
